added temp check list

--- a/TODO
+++ b/TODO
@@ -5,3 +5,7 @@ TODO List
 3. Use youtube-dl's advance feature to download multiple chunk  at same time.
 3. Add for suport for multiple chunk download for file format.
 4. Design GUI. 
+
+Temp Check list
+------------------------
+1.
